2004-02-29  Elliott Hughes  <enh@acm.org>

	* src/error.cpp: Fix "jikes --help" to show which +P groups are enabled
	by default, rather than misleadingly trying (and failing) to show what
	bare +P does. This whole area is something of a mess, so I expect to
	be back soon.
	Also add a new +Pall option to allow command-lines of the form "jikes
	+Pall +Pno-redundant-modifier +Pno-modifier-order +Pno-serial", for
	people who'd rather enable everything and explicitly disable what they
	don't like than explicitly enable everything they want.
	* doc/jikes.1: Document new +Pall option. The whole +P section was
	rather misleading and inaccurate, so I've rewritten it to correspond
	jikes' current behavior.

2004-02-28  Elliott Hughes  <enh@acm.org>

	* NEWS: Try to keep track of what I've done, so I don't have to
	read through the ChangeLog when we're getting ready to release 1.20.

2004-02-28  Elliott Hughes  <enh@acm.org>

	* src/error.cpp: Implement upgrading of warnings to errors, as well
	as the old optional upgrading of cautions. Fixes bug 665.
	* src/jikesapi.cpp, jikesapi.h: Replace the nowarn and zero_defect
	boolean fields with a new field that represents the level of tolerance
	we show towards warnings and cautions.
	* src/option.cpp: Parse +Z0, +Z1 and +Z2, and re-implement -nowarn, +Z
	and --zero-cautions in terms of the new tolerance level.
	variable; or hiding of fields when declaring a field.
	* src/stream.cpp: Tracks the API change for testing whether warnings
	should be generated.
	* src/jikes.cpp, doc/jikes.1: Document new +Z sub-options.

2004-02-27  Elliott Hughes  <enh@acm.org>

	* src/body.cpp, src/semantic.h: Add a method to check for an
	accessible field with a given name (WarnOfAccessibleFieldWithName).
	* src/error.cpp, error.h: New error messages, and +P[no-]shadow.
	* src/body.cpp, src/decl.cpp: Check for shadowing of fields
	when declaring a local variable, a foreach variable, a catch
	variable; or hiding of fields when declaring a field.